apps/app-proxy/overlays/csdp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: csdp-cap-app-proxy
  namespace: csdp
spec:
  ingressClassName: nginx
  rules:
  - host: a855d53c861ea4248af6b61b57e020a2-5961aedc277d3584.elb.us-east-2.amazonaws.com
    http:
      paths:
      - backend:
          service:
            name: cap-app-proxy
            port:
              number: 3017
        path: /app-proxy/
        pathType: Prefix
status:
  loadBalancer: {}
